adicionado js e certificacoes

--- a/index.html
+++ b/index.html
@@ -114,11 +114,11 @@
     <div class="sidebar">
         <h2>Giovanni Alves</h2>
 		
-		<p style="font-size:14px; line-height:1.4;">Cyber Security Consultant | CSIRT | SOC | MDR | CEH Master | Security+ | CySA+ In Progress</p>
+		<p style="font-size:14px; line-height:1.4;">Cyber Security Consultant | Incident Response (DFIR) & Threat Hunting | CySA+, Security+, CSAP, CEH Master</p>
 
         <h3>Contato</h3>
         <p>Email: giovanni33316@gmail.com</p>
-        <p>LinkedIn: www.linkedin.com/in/giovanni-alves-546412154/</a></p>
+        <p>LinkedIn: www.linkedin.com/in/giovanni-s-alves</a></p>
 
         <h3>Certificados</h3>
         <div class="cert-grid">
@@ -126,6 +126,8 @@
             <img src="./img/ceh_practical.png">
             <img src="./img/ceh_master.png">
             <img src="./img/securityplus.png">
+			<img src="./img/CSAP.png">
+            <img src="./img/cysa.png">
         </div>
     </div>
 
