--- a/src/incidentes.html
+++ b/src/incidentes.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cases de Investigação - Giovanni Alves</title>
-	
+
+	<script src="../js/main.js"></script>
+
 	<!-- Google tag (gtag.js) -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-WGSJJ6R80P"></script>
 	<script>
@@ -102,11 +104,13 @@
             <li><img src="../img/ceh_practical.png" alt="CEH Practical" width="80"></li>
             <li><img src="../img/ceh_master.png" alt="CEH Master" width="80"></li>
             <li><img src="../img/securityplus.png" alt="Security+" width="80"></li>
+			<li><img src="../img/CSAP.png" alt="CEH Master" width="80"></li>
+            <li><img src="../img/cysa.png" alt="Security+" width="80"></li>
         </ul>
 
         <h2>Sobre Mim</h2>
         <p style="font-size:14px; line-height:1.4;">
-            Cyber Security Consultant | CSIRT | SOC | MDR | CEH Master | Security+<br><br>
+            Cyber Security Consultant | Incident Response (DFIR) & Threat Hunting | CySA+, Security+, CSAP, CEH Master<br><br>
             Email: giovanni33316@gmail.com
         </p>
     </div>
