--- a/src/servicos.html
+++ b/src/servicos.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ferramentas e Payloads - Giovanni Alves</title>
 	
+	<script src="../js/main.js"></script>
+	
 	<!-- Google tag (gtag.js) -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-WGSJJ6R80P"></script>
 	<script>
@@ -156,8 +158,8 @@
         </p>
         <p>
             🔗 LinkedIn: 
-            <a class="contact-link" href="https://www.linkedin.com/in/giovanni-alves-546412154/" target="_blank">
-                www.linkedin.com/in/giovanni-alves-546412154/
+            <a class="contact-link" href="https://www.linkedin.com/in/giovanni-s-alves/" target="_blank">
+                www.linkedin.com/in/giovanni-s-alves/
             </a>
         </p>
         <a class="top-link" href="#topo">Voltar ao topo</a>
