--- a/src/cases.html
+++ b/src/cases.html
@@ -131,7 +131,7 @@
             </div>
 
             <div class="mt-20 pt-20 border-t border-white/5 flex justify-center">
-                 <a href="index.html" class="flex items-center gap-3 text-white group hover:text-emerald-400 transition-colors">
+                 <a href="../index.html" class="flex items-center gap-3 text-white group hover:text-emerald-400 transition-colors">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m15 18-6-6 6-6"/></svg>
                     <span class="font-bold uppercase tracking-widest text-xs">Voltar ao Início</span>
                 </a>
